--- a/style.css
+++ b/style.css
@@ -46,11 +46,12 @@
 }
 
 body {
-    font-family: 'Zen Maru Gothic', 'Noto Sans JP', 'やさしさゴシック', 'Hiragino Sans', sans-serif;
+    font-family: 'Zen Maru Gothic','やさしさゴシック', 'Noto Sans JP', 'Hiragino Sans', sans-serif;
     background-image: url('img/bg.jpg');
     background-repeat: repeat;
     background-size: 50%;
     color: #79695B;
+    font-weight: 500;
     line-height: 1.6;
     letter-spacing: 0.05em;
 }
