--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ body {
 
 /* Message Section */
 .message-section {
-    padding: 0px 20px 40px 20px;
+    padding: 0px 20px 20px 20px;
     text-align: center;
 }
 
@@ -288,7 +288,7 @@ body {
 
 /* News Section */
 .news-section {
-    padding: 40px 20px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -347,7 +347,7 @@ a.news-item:hover {
 
 /* Cast Section */
 .cast-section {
-    padding: 40px 20px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -538,7 +538,7 @@ a.cast-member:hover .cast-image {
 
 /* System Section */
 .system-section {
-    padding: 40px 20px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -555,7 +555,7 @@ a.cast-member:hover .cast-image {
 
 /* Access Section */
 .access-section {
-    padding: 40px 20px;
+    padding: 20px;
     text-align: center;
 }
 
@@ -731,6 +731,7 @@ a.cast-member:hover .cast-image {
     min-width: 300px;
     text-align: left;
     overflow: hidden;
+    margin-bottom: 40px;
 }
 
 .access-info h3 {
@@ -880,7 +881,7 @@ a.cast-member:hover .cast-image {
     .logo-menu-container {
         grid-template-columns: 1fr;
         gap: 10px;
-        padding: 10px;
+        padding: 0 10px 10px 0;;
     }
     
     .logo-menu-container .menu-item {
