--- a/style.css
+++ b/style.css
@@ -767,6 +767,14 @@ a.cast-member:hover .cast-image {
     display: none;
 }
 
+.station-title {
+    color: #79695B;
+    font-weight: 700;
+    font-size: 18px;
+    border-bottom: 2px dotted #cccccc;
+    padding-bottom: 2px;
+}
+
 /* Footer */
 .footer {
     text-align: center;
@@ -1083,10 +1091,6 @@ a.cast-member:hover .cast-image {
         transform: scale(1.2) rotate(0deg) !important;
     }
     
-    
-    .access-info h3 {
-        font-size: 21px;
-    }
     
     .menu-list {
         flex-direction: column;
