--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
 
 body {
     font-family: 'Zen Maru Gothic','やさしさゴシック', 'Noto Sans JP', 'Hiragino Sans', sans-serif;
+    background-color: #feeff6;
     background-image: url('img/bg.jpg');
     background-repeat: repeat;
     background-size: 50%;
