最寄り駅のスタイルに上ボーダーを追加
- 上下に点線ボーダーを配置
- パディングも上下に適用

--- a/style.css
+++ b/style.css
@@ -772,7 +772,9 @@ a.cast-member:hover .cast-image {
     color: #79695B;
     font-weight: 700;
     font-size: 18px;
+    border-top: 2px dotted #cccccc;
     border-bottom: 2px dotted #cccccc;
+    padding-top: 2px;
     padding-bottom: 2px;
 }
 
