--- a/style.css
+++ b/style.css
@@ -778,6 +778,23 @@ a.cast-member:hover .cast-image {
     padding-bottom: 2px;
 }
 
+.wait-icon {
+    position: absolute;
+    top: -2%;
+    left: -5%;
+    width: 140px;
+    height: auto;
+    transform: rotate(-9deg) scale(0);
+    transform-origin: bottom center;
+    opacity: 0;
+    transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55), opacity 0.3s ease;
+}
+
+.wait-icon.show {
+    transform: rotate(-9deg) scale(1);
+    opacity: 1;
+}
+
 /* Footer */
 .footer {
     text-align: center;
@@ -1121,6 +1138,17 @@ a.cast-member:hover .cast-image {
     
     .menu-list p {
         font-size: 16px;
+    }
+    
+    .wait-icon {
+        top: -9%;
+        left: -6%;
+        width: 100px;
+        transform: rotate(-5deg) scale(0);
+    }
+    
+    .wait-icon.show {
+        transform: rotate(-5deg) scale(1);
     }
 }
 
